<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="animation_disable">Disable animation feedback</string>
    <string name="animation_enable">Enable animation feedback</string>
    <string name="app_google_assistant">Google Assistant</string>
    <string name="app_google_assistant_voice">Google Assistant / Google Voice Search</string>
    <string name="app_google_voice_search">Google Voice Search</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="asus_advanced_settings_gripsensor">AirTriggers</string>
    <string name="asus_advanced_settings_screenshot">Screenshot</string>
    <string name="asus_fingerprint_enroll_done">Done</string>
    <string name="asus_zen_mode_settings_title">Do not disturb</string>
    <string name="asusres_actionbar_searchview_query_hint">Search</string>
    <string name="asusres_commonres_version">v7.0.39.200521</string>
    <string name="asusres_font_family_ab_title">@string/asusres_font_family_medium</string>
    <string name="asusres_font_family_am_title">@string/asusres_font_family_medium</string>
    <string name="asusres_font_family_bottom_navigation">@string/asusres_font_family_main</string>
    <string name="asusres_font_family_button">@string/asusres_font_family_main</string>
    <string name="asusres_font_family_dialog_button_bar">@string/asusres_font_family_medium</string>
    <string name="asusres_font_family_dialog_title">@string/asusres_font_family_medium</string>
    <string name="asusres_font_family_light">sans-serif-light</string>
    <string name="asusres_font_family_list">@string/asusres_font_family_main</string>
    <string name="asusres_font_family_list_header">@string/asusres_font_family_medium</string>
    <string name="asusres_font_family_main">sans-serif</string>
    <string name="asusres_font_family_medium">sans-serif-medium</string>
    <string name="asusres_font_family_permission_request_dialog_title">@string/asusres_font_family_main</string>
    <string name="asusres_font_family_subtitle">@string/asusres_font_family_light</string>
    <string name="asusres_font_family_widget">@string/asusres_font_family_main</string>
    <string name="asusres_searchview_query_hint">Search</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_back">Prev</string>
    <string name="btn_correct">Retest</string>
    <string name="btn_force_retest">Reset</string>
    <string name="btn_next">Next</string>
    <string name="btn_reset">Reset</string>
    <string name="category_all_can_use">For all situations</string>
    <string name="category_gesture">Squeeze gesture</string>
    <string name="category_grip_landscape_tap">Tap gesture</string>
    <string name="category_grip_tap_force">Game related</string>
    <string name="category_unlock_use">When screen is unlocked</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="ckb_increase_sensitivity">Sensitivity Booster</string>
    <string name="ckb_increase_sensitivity_toast">Enhance the sensitivity of both buttons</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="continue_tap_desc">Continuous tapping (not long press), finger does not need to leave the surface of the touch area</string>
    <string name="continue_tap_title">Finger resting setting</string>
    <string name="continuous_tap_info">"Anti-false touch is a setting value of whether a tap is triggered when fingers are placed on the touch area.
The higher the anti-false touch is set, the better the anti-false touch effect"</string>
    <string name="continuous_tap_switch_title">Finger resting</string>
    <string name="copy">Copy</string>
    <string name="default_profile">Default profile</string>
    <string name="default_web_client_id">991646456143-60bp0e6rv5hltg843i6qh4sb2t3jcugh.apps.googleusercontent.com</string>
    <string name="delete_app_descrip">The custom virtual keys of the app will also be deleted. Are you sure?</string>
    <string name="delete_app_title">Delete apps</string>
    <string name="desc_left">Anti-false touch</string>
    <string name="descrip_answer_calls">Squeeze to answer calls</string>
    <string name="descrip_take_pic">Squeeze to take picture</string>
    <string name="enable_vibrate_switch_summary">Vibration feedback when AirTriggers are triggered</string>
    <string name="enable_vibrate_switch_title">Vibration</string>
    <string name="error_icon_content_description">Error</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="firebase_database_url">https://airtriggers-18be8.firebaseio.com</string>
    <string name="float_btn_action">Action</string>
    <string name="float_btn_touch_point">Touch point</string>
    <string name="force_level">Level: %1$s</string>
    <string name="gcm_defaultSenderId">991646456143</string>
    <string name="google_api_key">AIzaSyBaApQhUaG5Qri8_mBQ4KdxIuhaooNkveg</string>
    <string name="google_app_id">1:991646456143:android:d91861c69a91676ae08d3a</string>
    <string name="google_assist_edit_app">Select an app</string>
    <string name="google_assist_not_support_wairning">Please note that Google Assistant is not available in some regions or countries, so Google Search is provided instead in these areas.</string>
    <string name="google_assist_pref_cam_back">Open camera</string>
    <string name="google_assist_pref_snap_shot">Google Assistant with personal updates</string>
    <string name="google_assist_pref_sound_mode">Sound mode</string>
    <string name="google_assist_pref_sound_mode_summary">Sound / vibrate / silent</string>
    <string name="google_crash_reporting_api_key">AIzaSyBaApQhUaG5Qri8_mBQ4KdxIuhaooNkveg</string>
    <string name="google_storage_bucket">airtriggers-18be8.appspot.com</string>
    <string name="grip_notifi_release">Please release after squeezing</string>
    <string name="gripsensor_grip_strength_adjust">Squeeze force level</string>
    <string name="gripsensor_grip_strength_adjust_desc">"It's easier to trigger squeeze gesture with lower force level"</string>
    <string name="gripsensor_grip_strength_adjust_title">Force level</string>
    <string name="gripsensor_grip_strength_high">High</string>
    <string name="gripsensor_grip_strength_low">Low</string>
    <string name="gripsensor_grip_strength_mid">Medium</string>
    <string name="gripsensor_heavypress_trigger">Long squeeze</string>
    <string name="gripsensor_lightpress_trigger">Short squeeze</string>
    <string name="intro_pressure_new">Current force level</string>
    <string name="intro_pressure_old">Original force level</string>
    <string name="landscape_airtrigger_settings_title">Preferences and touch settings</string>
    <string name="show_anim_switch_summary">Display visual feedback during game play</string>
    <string name="show_anim_switch_title">Visual</string>
    <string name="side_tap_title">Dual partition buttons setting</string>
    <string name="skip_button_label">Skip</string>
    <string name="slide_title">Slide setting</string>
    <string name="summary_continuous_tap">調整點擊力道</string>
    <string name="summary_slide">測試滑行範圍</string>
    <string name="summary_slight_tap">測試點擊力道</string>
    <string name="summary_swipe">測試滑行速度</string>
    <string name="swipe_title">Swipe setting</string>
    <string name="tap_test_title">Tap setting</string>
</resources>