<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.asus.airtriggers.preference.TutorialPreference android:layout="@layout/grip_tutorial" android:selectable="false" android:key="tutorial" />
    <PreferenceCategory android:persistent="false" android:title="@string/category_gesture" android:key="gesture">
        <com.asus.airtriggers.preference.CNPreference android:persistent="false" android:title="@string/gripsensor_lightpress_trigger" android:key="gripsensor_lightpress_trigger_unlock" />
        <com.asus.airtriggers.preference.CNPreference android:persistent="false" android:title="@string/gripsensor_heavypress_trigger" android:key="gripsensor_heavypress_trigger_unlock" />
    </PreferenceCategory>
    <com.asus.airtriggers.preference.CNPreference android:persistent="false" android:title="@string/gripsensor_grip_strength_adjust" android:key="gripsensor_grip_strength_adjust">
        <intent android:targetPackage="org.omnirom.device" android:targetClass="org.omnirom.device.gripsensor.GripStrengthAdjustActivity" />
    </com.asus.airtriggers.preference.CNPreference>
    <PreferenceCategory android:title="@string/category_grip_tap_force" android:key="game_tap_adjust">
        <com.asus.airtriggers.preference.CNPreference android:persistent="false" android:title="@string/landscape_airtrigger_settings_title" android:key="gripsensor_value_adjust">
            <intent android:targetPackage="org.omnirom.device" android:targetClass="org.omnirom.device.gripsensor.TapStrengthAdjustActivity" />
        </com.asus.airtriggers.preference.CNPreference>
    </PreferenceCategory>
</PreferenceScreen>