<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/rl_seekbar" android:tag="layout/bottom_seekbar_layout_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/TextAppearance.AsusRes.Medium" android:id="@id/txt_left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/btn_padding" android:text="@string/desc_left" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <ImageView android:id="@id/info_left" android:layout_width="22.0dip" android:layout_height="22.0dip" android:layout_marginLeft="5.0dip" android:src="@drawable/ic_asus_ic_info" android:layout_toRightOf="@id/txt_left" />
    <ImageView android:id="@id/info_right" android:layout_width="22.0dip" android:layout_height="22.0dip" android:layout_marginRight="@dimen/btn_padding" android:src="@drawable/ic_asus_ic_info" android:layout_alignParentRight="true" />
    <TextView android:textAppearance="@style/TextAppearance.AsusRes.Medium" android:id="@id/txt_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:text="@string/desc_left" android:layout_toLeftOf="@id/info_right" />
    <SeekBar android:id="@id/seekBar_left" android:layout_width="@dimen/seekbar_width" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/btn_padding" android:layout_marginTop="@dimen/seekbar_margin_top" android:layout_below="@id/txt_left" android:layout_alignParentLeft="true" android:progressTint="@color/grip_sensor_tap_left_color" android:progressBackgroundTint="@color/test_seekbar_tick_solid_color_left" android:thumbTint="@color/grip_sensor_tap_left_color" android:tickMark="@drawable/seekbar_tick" />
    <SeekBar android:id="@id/seekBar_right" android:layout_width="@dimen/seekbar_width" android:layout_height="wrap_content" android:layout_marginTop="@dimen/seekbar_margin_top" android:layout_marginRight="@dimen/btn_padding" android:layout_below="@id/txt_right" android:layout_alignParentRight="true" android:progressTint="@color/tint_arrow_right" android:progressBackgroundTint="@color/test_seekbar_tick_solid_color_right" android:thumbTint="@color/tint_arrow_right" android:tickMark="@drawable/seekbar_tick" />
    <RelativeLayout android:id="@id/rl_label_left" android:layout_width="@dimen/seekbar_width" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/btn_padding" android:layout_below="@id/seekBar_left" android:layout_alignParentLeft="true">
        <TextView android:textAppearance="@style/TextAppearance.AsusRes.Secondary" android:id="@id/txt_low" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gripsensor_grip_strength_low" />
        <TextView android:textAppearance="@style/TextAppearance.AsusRes.Secondary" android:id="@id/txt_mid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gripsensor_grip_strength_mid" android:layout_centerHorizontal="true" />
        <TextView android:textAppearance="@style/TextAppearance.AsusRes.Secondary" android:id="@id/txt_high" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gripsensor_grip_strength_high" android:layout_alignParentEnd="true" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/rl_label_right" android:layout_width="@dimen/seekbar_width" android:layout_height="wrap_content" android:layout_marginRight="@dimen/btn_padding" android:layout_below="@id/seekBar_right" android:layout_alignParentRight="true">
        <TextView android:textAppearance="@style/TextAppearance.AsusRes.Secondary" android:id="@id/txt2_low" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gripsensor_grip_strength_low" />
        <TextView android:textAppearance="@style/TextAppearance.AsusRes.Secondary" android:id="@id/txt2_mid" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gripsensor_grip_strength_mid" android:layout_centerHorizontal="true" />
        <TextView android:textAppearance="@style/TextAppearance.AsusRes.Secondary" android:id="@id/txt2_high" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gripsensor_grip_strength_high" android:layout_alignParentEnd="true" />
    </RelativeLayout>
</RelativeLayout>